@@ -88,7 +88,8 @@ libc_a_SOURCES += _strchr.c
 libc_a_SOURCES += _strcmp.c
 libc_a_SOURCES += _strcpy.c
 libc_a_SOURCES += _strcspn.c
-libc_a_SOURCES += _strlen.c
+libc_a_SOURCES += strlen.c
+libc_a_SOURCES += strnlen.c
 libc_a_SOURCES += _strncat.c
 libc_a_SOURCES += _strncmp.c
 libc_a_SOURCES += _strncpy.c
